--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ add_subdirectory("external/SDL")
 project("ILATSPIDN")
 file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(my_program "${MY_SOURCES}")
-target_link_libraries(my_program PRIVATE EnTT::EnTT SDL3::SDL3)
+target_link_libraries(my_program PRIVATE EnTT::EnTT SDL3::SDL3-static)
