Some camera stuff and some atlas stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 add_subdirectory("external/entt")
 add_subdirectory("external/SDL")
 
-project("ILATSPIDN")
+project("ILATSPIDK")
 file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
-add_executable(my_program "${MY_SOURCES}")
-target_link_libraries(my_program PRIVATE EnTT::EnTT SDL3::SDL3-static)
+add_executable(ILATSPIDK "${MY_SOURCES}")
+target_link_libraries(ILATSPIDK PRIVATE EnTT::EnTT SDL3::SDL3-static)
