--- a/launch.json
+++ b/launch.json
@@ -11,7 +11,19 @@
             "cwd": "${workspaceFolder}/build",
             "environment": [],
             "externalConsole": true,
-            "MIMode": "gdb"
+            "MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Import pretty-printing for gdb",
+					"text": "python import sys;sys.path.insert(0, 'C:\\pretty_printer');from printers import register_libcxx_printer_loader;register_libcxx_printer_loader()",
+					"ignoreFailures": false
+				},
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": false
+				}
+			]
         }
     ]
 }
